buildscript {
    ext {
        dependencyManagementVersion = "1.0.10.RELEASE"
    }

    repositories {
        mavenCentral()
        jcenter()
    }

    dependencies {
        classpath "io.spring.gradle:dependency-management-plugin:${dependencyManagementVersion}"
    }
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
        jcenter()
        maven { url 'https://jitpack.io' }
    }

    dependencies {
        implementation 'org.spockframework.spock:spock-core:spock-1.3'
        implementation 'org.spockframework.spock:spock-spring:spock-1.3'
    }

    group 'kitkat.auth'
    version '1.0'

    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14

    test {
        useJUnitPlatform()
    }
}

